[gd_scene load_steps=8 format=2]

[ext_resource path="res://scenes/LiveCaptionSample.gd" type="Script" id=1]
[ext_resource path="res://addons/godot_subtitles/live_caption_node.gd" type="Script" id=2]
[ext_resource path="res://addons/godot_subtitles/fonts/Roboto/italic.tres" type="DynamicFont" id=3]
[ext_resource path="res://addons/godot_subtitles/fonts/Roboto/bold.tres" type="DynamicFont" id=4]
[ext_resource path="res://addons/godot_subtitles/fonts/Roboto/bold_italic.tres" type="DynamicFont" id=5]
[ext_resource path="res://addons/godot_subtitles/fonts/Roboto/normal.tres" type="DynamicFont" id=6]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 1, 1, 1, 0.0784314 )

[node name="LiveCaptionSample" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true,
"_edit_use_anchors_": false
}
subtitle = NodePath("PanelContainer/Panel/VBoxContainer/Panel2/MarginContainer/LiveCaption")
mood_list = NodePath("PanelContainer/Panel/VBoxContainer/Panel/HBoxContainer/VBoxContainer2/ItemList")
force_clear_btn = NodePath("PanelContainer/Panel/VBoxContainer/Panel/HBoxContainer/VBoxContainer/ForceClearBtn")
custom_caption_text_edit = NodePath("PanelContainer/Panel/VBoxContainer/VBoxContainer3/TextEdit")

[node name="PanelContainer" type="PanelContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 1017.0
margin_bottom = 593.0

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackBtn" type="Button" parent="PanelContainer/Panel/VBoxContainer"]
margin_right = 120.0
margin_bottom = 20.0
size_flags_horizontal = 0
text = "back_button_text"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="PanelContainer/Panel/VBoxContainer"]
margin_top = 24.0
margin_right = 1010.0
margin_bottom = 258.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 1.5

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/Panel/VBoxContainer/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/Panel/VBoxContainer/Panel/HBoxContainer"]
margin_right = 503.0
margin_bottom = 234.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="PanelContainer/Panel/VBoxContainer/Panel/HBoxContainer/VBoxContainer"]
margin_right = 503.0
margin_bottom = 14.0
text = "live_text_1_generate"

[node name="Button1" type="Button" parent="PanelContainer/Panel/VBoxContainer/Panel/HBoxContainer/VBoxContainer"]
margin_top = 18.0
margin_right = 503.0
margin_bottom = 38.0
text = "Dialog: Alyx Vance"
align = 0

[node name="Button2" type="Button" parent="PanelContainer/Panel/VBoxContainer/Panel/HBoxContainer/VBoxContainer"]
margin_top = 42.0
margin_right = 503.0
margin_bottom = 62.0
text = "Dialog: G-Man"
align = 0

[node name="Button4" type="Button" parent="PanelContainer/Panel/VBoxContainer/Panel/HBoxContainer/VBoxContainer"]
margin_top = 66.0
margin_right = 503.0
margin_bottom = 86.0
text = "Dialog: Dr. Breen"
align = 0

[node name="Button3" type="Button" parent="PanelContainer/Panel/VBoxContainer/Panel/HBoxContainer/VBoxContainer"]
margin_top = 90.0
margin_right = 503.0
margin_bottom = 110.0
text = "Descriptive"
align = 0

[node name="ForceClearBtn" type="CheckButton" parent="PanelContainer/Panel/VBoxContainer/Panel/HBoxContainer/VBoxContainer"]
margin_top = 114.0
margin_right = 503.0
margin_bottom = 154.0
text = "live_text_2_force_clean"

[node name="VBoxContainer2" type="VBoxContainer" parent="PanelContainer/Panel/VBoxContainer/Panel/HBoxContainer"]
margin_left = 507.0
margin_right = 1010.0
margin_bottom = 234.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label2" type="Label" parent="PanelContainer/Panel/VBoxContainer/Panel/HBoxContainer/VBoxContainer2"]
margin_right = 503.0
margin_bottom = 14.0
text = "live_text_1_mood"

[node name="ItemList" type="ItemList" parent="PanelContainer/Panel/VBoxContainer/Panel/HBoxContainer/VBoxContainer2"]
margin_top = 18.0
margin_right = 503.0
margin_bottom = 234.0
size_flags_horizontal = 3
size_flags_vertical = 3
items = [ "DEFAULT", null, false, "UPPERCASE", null, false, "QUOTE", null, false, "ITALIC", null, false, "BOLD", null, false, "SHAKE", null, false ]

[node name="HSeparator" type="HSeparator" parent="PanelContainer/Panel/VBoxContainer"]
margin_top = 262.0
margin_right = 1010.0
margin_bottom = 266.0

[node name="VBoxContainer3" type="VBoxContainer" parent="PanelContainer/Panel/VBoxContainer"]
margin_top = 270.0
margin_right = 1010.0
margin_bottom = 426.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="PanelContainer/Panel/VBoxContainer/VBoxContainer3"]
margin_right = 1010.0
margin_bottom = 14.0
text = "live_text_2_custom"

[node name="TextEdit" type="TextEdit" parent="PanelContainer/Panel/VBoxContainer/VBoxContainer3"]
margin_top = 18.0
margin_right = 1010.0
margin_bottom = 132.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "live_text_2_custom_text"
show_line_numbers = true
draw_tabs = true
draw_spaces = true

[node name="CustomCaptionBtn" type="Button" parent="PanelContainer/Panel/VBoxContainer/VBoxContainer3"]
margin_left = 424.0
margin_top = 136.0
margin_right = 585.0
margin_bottom = 156.0
size_flags_horizontal = 4
text = "live_text_2_custom_btn"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel2" type="Panel" parent="PanelContainer/Panel/VBoxContainer"]
margin_top = 430.0
margin_right = 1010.0
margin_bottom = 586.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 1 )

[node name="Label" type="Label" parent="PanelContainer/Panel/VBoxContainer/Panel2"]
margin_right = 40.0
margin_bottom = 14.0
text = "live_text_result"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/Panel/VBoxContainer/Panel2"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LiveCaption" type="RichTextLabel" parent="PanelContainer/Panel/VBoxContainer/Panel2/MarginContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 990.0
margin_bottom = 136.0
custom_fonts/bold_italics_font = ExtResource( 5 )
custom_fonts/italics_font = ExtResource( 3 )
custom_fonts/bold_font = ExtResource( 4 )
custom_fonts/normal_font = ExtResource( 6 )
script = ExtResource( 2 )
alignment = "left"

[connection signal="pressed" from="PanelContainer/Panel/VBoxContainer/BackBtn" to="." method="_on_BackBtn_pressed"]
[connection signal="pressed" from="PanelContainer/Panel/VBoxContainer/Panel/HBoxContainer/VBoxContainer/Button1" to="." method="_on_character_button_pressed" binds= [ "Alyx Vance" ]]
[connection signal="pressed" from="PanelContainer/Panel/VBoxContainer/Panel/HBoxContainer/VBoxContainer/Button2" to="." method="_on_character_button_pressed" binds= [ "G-Man" ]]
[connection signal="pressed" from="PanelContainer/Panel/VBoxContainer/Panel/HBoxContainer/VBoxContainer/Button4" to="." method="_on_character_button_pressed" binds= [ "Dr. Breen" ]]
[connection signal="pressed" from="PanelContainer/Panel/VBoxContainer/Panel/HBoxContainer/VBoxContainer/Button3" to="." method="_on_descriptive_caption_button_pressed"]
[connection signal="pressed" from="PanelContainer/Panel/VBoxContainer/VBoxContainer3/CustomCaptionBtn" to="." method="_on_CustomCaptionBtn_pressed"]
